PDFBOX-5660: close input, as suggested by Valery Bokov; closes #339
git-svn-id: https://svn.apache.org/repos/asf/pdfbox/trunk@1929778 13f79535-47bb-0310-9956-ffa450edef68